# betclic_robot

./: .dockerignore  .gitignore  README.md  daily_report.py  dockerfile  hourly_report.py  inspect_bet.py  inspect_game.py  inspect_game2.py  inspect_game3.py  inspect_game4.py  inspect_game5.py  inspect_game6.py  inspect_game7.py  main.py  pyproject.toml  start_bot.sh
core/: browser.py  logger.py
modules/: example_site.py
services/: analyze.py  bot_service.py  notify_bot.py  predict.py  report.py  storage.py
tests/: conftest.py  test_analyze_edges.py  test_storage_predict_report.py
