[project]
name = "betclic-robot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "playwright>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
